# sps-cognitive-os-v1.0.0

./: .gitignore  RELEASE_NOTES.md  codemagic.yaml  worklog.md
android-companion/: README.md  (+4 more)
kernel/: Cargo.toml
kernel/crates/sps-agent-loop/: Cargo.toml
kernel/crates/sps-agent-loop/src/: lib.rs  loop_engine.rs  prompt.rs  step.rs
kernel/crates/sps-agents/: Cargo.toml
kernel/crates/sps-agents/src/: agent.rs  archetypes.rs  lib.rs  messages.rs  reducer.rs  runtime.rs  sink.rs
kernel/crates/sps-agents/tests/: agent_tests.rs
kernel/crates/sps-autonomy/: Cargo.toml
kernel/crates/sps-autonomy/src/: governor.rs  lib.rs  reducer.rs  sandbox.rs
kernel/crates/sps-autonomy/tests/: autonomy_tests.rs
kernel/crates/sps-bus/: Cargo.toml
kernel/crates/sps-bus/src/: command.rs  event_bus.rs  lib.rs  state_ext.rs
kernel/crates/sps-bus/tests/: bus_tests.rs
kernel/crates/sps-cli/: Cargo.toml
kernel/crates/sps-cli/src/: lib.rs  main.rs
kernel/crates/sps-cli/src/commands/: agent.rs  events.rs  goal.rs  memory.rs  mod.rs  provider.rs  replay.rs  snapshot.rs  stats.rs  verify.rs
kernel/crates/sps-code-intel/: Cargo.toml
kernel/crates/sps-code-intel/src/: error.rs  index.rs  lib.rs  search.rs  symbol.rs
kernel/crates/sps-code-intel/src/languages/: generic.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
kernel/crates/sps-cognitive/: Cargo.toml
kernel/crates/sps-cognitive/src/: advanced_memory.rs  autonomous.rs  background_scheduler.rs  cognitive_loop.rs  consolidation.rs  counterfactual.rs  decision_scorer.rs  decision_tests.rs  emotional.rs  forecaster.rs  forgetting.rs  importance.rs  knowledge_graph.rs  lib.rs  opportunity.rs  perception_fuser.rs  platform_adapters.rs  predictive_planner.rs  self_mod_pipeline.rs  self_modification.rs  simulator.rs
kernel/crates/sps-core/: Cargo.toml
kernel/crates/sps-core/examples/: deterministic_replay_proof.rs
kernel/crates/sps-core/src/: actor.rs  clock.rs  error.rs  event.rs  event_store.rs  event_type.rs  kernel.rs  lib.rs  replay.rs  sink.rs  snapshot.rs
kernel/crates/sps-core/src/reducer/: builtin.rs  mod.rs  pipeline.rs  registry.rs
kernel/crates/sps-core/tests/: deterministic_replay.rs
kernel/crates/sps-effects/: Cargo.toml
kernel/crates/sps-effects/src/: effect.rs  lib.rs  manager.rs  registry.rs
kernel/crates/sps-effects/tests/: effect_system.rs
kernel/crates/sps-execution/: Cargo.toml
kernel/crates/sps-execution/src/: analysis.rs  generation.rs  lib.rs  reducer.rs
kernel/crates/sps-execution/tests/: execution_tests.rs
kernel/crates/sps-factory/: Cargo.toml
kernel/crates/sps-factory/src/: lib.rs  llm.rs  provider_llm.rs  reducer.rs  supervisor.rs  workflow.rs
kernel/crates/sps-factory/tests/: factory_tests.rs
kernel/crates/sps-ffi/: Cargo.toml
kernel/crates/sps-ffi/src/: lib.rs
kernel/crates/sps-git/: Cargo.toml
kernel/crates/sps-git/src/: blame.rs  branches.rs  error.rs  history.rs  lib.rs  status.rs
kernel/crates/sps-goals/: Cargo.toml
kernel/crates/sps-goals/src/: hierarchy.rs  lib.rs  reducer.rs
kernel/crates/sps-goals/tests/: goal_tests.rs
kernel/crates/sps-improvement/: Cargo.toml
kernel/crates/sps-improvement/src/: analyzers.rs  lib.rs  loop_engine.rs  reducer.rs
kernel/crates/sps-improvement/tests/: improvement_tests.rs
kernel/crates/sps-integration/: Cargo.toml
kernel/crates/sps-integration/src/: lib.rs
kernel/crates/sps-integration/tests/: autonomy_smoke.rs  autonomy_validation.rs  checkpoint_e_fix2.rs  execution_validation.rs  factory_smoke.rs  factory_validation.rs  foundation_smoke.rs  full_pipeline.rs  h0_5_unknown_event.rs  h0_diagnostic.rs  h0b_diagnostic.rs  h4_benchmark.rs  p1_clone_cost.rs  p2_5_flame_profile.rs  p2_6_reducer_profile.rs  p2_7_json_sync_cost.rs  p2_trusted_producer.rs  phase11a_factory_hardening.rs  phase11b_effect_based_factory.rs  phase11c_factory_supervisor.rs  phase11d_llm_factory.rs  phase12a_mission_validation.rs  phase12b_multi_provider.rs  phase12c_self_improvement.rs  planner_validation.rs  reasoning_validation.rs  sprint_hardening.rs  world_validation.rs  youtube_goal_pipeline.rs
kernel/crates/sps-llm/: Cargo.toml
kernel/crates/sps-llm/src/: conversation.rs  error.rs  lib.rs  streaming.rs  structured.rs  tools.rs
kernel/crates/sps-lsp/: Cargo.toml
kernel/crates/sps-lsp/src/: lib.rs  main.rs  protocol.rs  server.rs
kernel/crates/sps-memory/: Cargo.toml
kernel/crates/sps-memory/src/: graph.rs  lib.rs  memory.rs  reducer.rs  stats.rs
kernel/crates/sps-memory/tests/: memory_tests.rs
kernel/crates/sps-planner/: Cargo.toml
kernel/crates/sps-planner/src/: lib.rs  plan.rs  reducer.rs  templates.rs
kernel/crates/sps-planner/tests/: planner_tests.rs
kernel/crates/sps-providers-http/: Cargo.toml
kernel/crates/sps-providers-http/src/: adapter.rs  anthropic.rs  lib.rs  ollama.rs  openai.rs  retry.rs  streaming.rs  templates.rs
kernel/crates/sps-providers-http/tests/: http_provider_tests.rs
kernel/crates/sps-reasoning/: Cargo.toml
kernel/crates/sps-reasoning/src/: analyzers.rs  lib.rs  reducer.rs
kernel/crates/sps-reasoning/tests/: reasoning_tests.rs
kernel/crates/sps-reflection/: Cargo.toml
kernel/crates/sps-reflection/src/: analyzers.rs  lib.rs  reducer.rs
kernel/crates/sps-reflection/tests/: reflection_tests.rs
kernel/crates/sps-server/: Cargo.toml
kernel/crates/sps-server/src/: lib.rs  main.rs  state.rs
kernel/crates/sps-server/static/: index.html
kernel/crates/sps-storage-memory/: Cargo.toml
kernel/crates/sps-storage-memory/src/: lib.rs
kernel/crates/sps-storage-sqlite/: Cargo.toml
kernel/crates/sps-storage-sqlite/src/: lib.rs
kernel/crates/sps-vectors/: Cargo.toml
kernel/crates/sps-vectors/src/: embedding.rs  index.rs  lib.rs  reducer.rs
kernel/crates/sps-vectors/tests/: vector_tests.rs
kernel/crates/sps-workspace/: Cargo.toml
kernel/crates/sps-workspace/src/: error.rs  lib.rs  ops.rs  scanner.rs  tree.rs
kernel/crates/sps-world/: Cargo.toml
kernel/crates/sps-world/src/: entities.rs  graph.rs  lib.rs  reducer.rs
kernel/crates/sps-world/tests/: world_tests.rs
(+135 files in other folders)
