[package]
name = "sps-agent-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPS Agent Execution Loop — ReAct pattern with tool use"

[dependencies]
sps-core = { path = "../sps-core" }
sps-effects = { path = "../sps-effects" }
sps-llm = { path = "../sps-llm" }
sps-agents = { path = "../sps-agents" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
smol_str.workspace = true
tokio = { version = "1", features = ["sync"] }
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
sps-storage-memory = { path = "../sps-storage-memory" }
