[package]
name = "sps-cognitive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPS Phase 15A — Cognitive Intelligence (Predictive Planning, Forecasting, Simulation)"

[dependencies]
sps-core = { path = "../sps-core" }
sps-goals = { path = "../sps-goals" }
sps-memory = { path = "../sps-memory" }
sps-world = { path = "../sps-world" }
sps-planner = { path = "../sps-planner" }
sps-reasoning = { path = "../sps-reasoning" }
sps-reflection = { path = "../sps-reflection" }
sps-execution = { path = "../sps-execution" }
sps-storage-memory = { path = "../sps-storage-memory" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
smol_str.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
