[package]
name = "sps-factory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPS Software Factory (Phase 11) — end-to-end project generation"

[dependencies]
sps-core = { path = "../sps-core" }
sps-execution = { path = "../sps-execution" }
sps-goals = { path = "../sps-goals" }
sps-effects = { path = "../sps-effects" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
smol_str.workspace = true

[dev-dependencies]
sps-storage-memory = { path = "../sps-storage-memory" }
