[package]
name = "sps-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPS integration tests — end-to-end cognitive pipeline"

[dependencies]
sps-core = { path = "../sps-core" }
sps-storage-memory = { path = "../sps-storage-memory" }
sps-storage-sqlite = { path = "../sps-storage-sqlite" }
sps-effects = { path = "../sps-effects" }
sps-bus = { path = "../sps-bus" }
sps-memory = { path = "../sps-memory" }
sps-world = { path = "../sps-world" }
sps-goals = { path = "../sps-goals" }
sps-planner = { path = "../sps-planner" }
sps-reasoning = { path = "../sps-reasoning" }
sps-agents = { path = "../sps-agents" }
sps-reflection = { path = "../sps-reflection" }
sps-vectors = { path = "../sps-vectors" }
sps-autonomy = { path = "../sps-autonomy" }
sps-improvement = { path = "../sps-improvement" }
sps-execution = { path = "../sps-execution" }
sps-factory = { path = "../sps-factory" }
sps-providers-http = { path = "../sps-providers-http" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
uuid.workspace = true
smol_str.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
rusqlite = { workspace = true }
