[package]
name = "sps-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SPS Workspace — file system scanning, tree view, file watching"

[dependencies]
sps-core = { path = "../sps-core" }
sps-code-intel = { path = "../sps-code-intel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
smol_str.workspace = true

[dev-dependencies]
tempfile = "3"
